templates/apimap-portal_template.yaml
---
# Source: apimap-portal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apimap-portal-release-name-service
  namespace: default
  labels:
    app: apimap-portal-release-name-portal
spec:
  
  type: ClusterIP
  
  ports:
    
    
    - name: https
      port: 8080
      targetPort: 8080
    
  selector:
    app: apimap-portal-release-name-portal
---
# Source: apimap-portal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apimap-portal-release-name-deployment
  labels:
    app: apimap-portal-release-name-portal
    role: frontend
    supplier: apimap.io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apimap-portal-release-name-portal
  template:
    metadata:
      labels:
        app: apimap-portal-release-name-portal
        role: frontend
    spec:
      volumes:
        - name: options
          configMap:
            name: apimap-portal-release-name-content-configmap
            items:
              - key: metadata-options.json
                path: metadata-options.json
              - key: search-options.json
                path: search-options.json
      containers:
        - name: apimap-portal-release-name-portal
          image: apimap/portal:v2.4.0
          imagePullPolicy: Always
          ports:
            - name: public
              containerPort: 8080
          volumeMounts:
            - name: options
              mountPath: /app/dist/content
---
# Source: apimap-portal/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: apimap-portal-release-name-ingress
  namespace: default
  labels:
    host: 
spec:
  
  rules:
    - host: 
      http:
        paths:
          - backend:
              service:
                name: apimap-portal-release-name-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
